--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 	<div id="page-wrapper">
 
-        <h1>Text File Reader</h1>
+        <h1>Chip8</h1>
         <div>
             enter chip-8 file: 
             <input type="file" id="fileInput">
